--- a/public/editarAlbum/editarAlbum.html
+++ b/public/editarAlbum/editarAlbum.html
@@ -40,6 +40,7 @@
           id="descripcion_del_album"
           cols="30"
           rows="10"
+          placeholder="Ingresa una descripcion"
           required
         ></textarea>
         <br />
