--- a/public/agregarAlbun/addAlbum.html
+++ b/public/agregarAlbun/addAlbum.html
@@ -46,6 +46,7 @@
         <textarea
         class="input"
           name="descripcion_del_album"
+          placeholder="Ingresa una descripcion"
           id="descripcion_del_album"
           cols="30"
           rows="10"
@@ -64,5 +65,8 @@
         <button type="submit">Añadir album</button>
       </form>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="addAlbum.js"></script>
   </body>
 </html>
