--- a/public/agregarCanciones/agregarCanciones.html
+++ b/public/agregarCanciones/agregarCanciones.html
@@ -55,5 +55,8 @@
         <button type="submit">Guardar</button> <br> <button type="reset">Cancelar</button>
       </form>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="agregarCanciones.js"></script>
   </body>
 </html>
