--- a/public/albums/album.html
+++ b/public/albums/album.html
@@ -25,17 +25,19 @@
         </div>  
         <div class="base">
         <!-- info album -->
-        <div> 
-            <h2>¿Tú crees en mi?</h2>
-            <br>
-            <p>¿Tú crees en mí? es el primer álbum de estudio de la cantante y compositora argentina Emilia, publicado el 31 de mayo de 2022 por la compañía Sony Music Latin. Musicalmente, el álbum abarca varios géneros, entre ellos, pop, R&B y urbano. Todas las canciones fueron escritas por Emilia y Daniel Ismael Real, con apoyo de músicos como Duki y Elena Rose. Asimismo, el álbum incluye colaboraciones con Duki, Nicki Nicole y Tiago PZK. Líricamente, Tú crees en mí? abarca temas como el empoderamiento, el amor, la superación de rupturas amorosas, la sensualidad y el disfrute.</p>
+        <div class="infoAlbum"> 
         </div>
         <br>
         <!-- canciones -->
-        <div>
-            <h2>Canciones</h2>
-            <br><br>
+        <div class="canciones">
+        <h2>Canciones</h2>
+        <br>
+        <div class="listaCanciones"></div>
         </div>
+        
         </div> 
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert"></script>
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+        <script src="album.js"></script>
 </body>
 </html>
