--- a/public/index.html
+++ b/public/index.html
@@ -35,8 +35,8 @@
         <div id="infoAlbum">
             <h2>Albums</h2>
             <br>
-            <div id="containerAlbums">
-                <div class="album">
+            <div class="containerAlbums">
+                <!-- <div class="album">
                 <i class="fa-star fa-regular fijoArriba"></i>
                 <img src="./imagenes/albumTCEM.jpg" alt="¿Tú crees en mi?">
                 <p>2022</p>
@@ -44,16 +44,17 @@
                 <div class="album">
                     <i class="fa-star fa-regular fijoArriba"></i>
                    <img src="./imagenes/albummp3.jpg" alt=".mp3">
-                 <p>2023</p>
+                 <p>2023</p> -->
                 </div>
             </div>
         </div>
-        <p>jashhasuidhs Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium debitis unde natus iusto optio, incidunt sint, alias numquam aut hic necessitatibus labore totam officiis culpa dolor excepturi perspiciatis ullam autem!</p>
-        <br>
-        <br>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, ipsum? Sed, nihil totam! Eligendi iure eaque laudantium nostrum itaque expedita inventore dolor quam, aperiam officia doloremque. Quas aliquid minus quos.</p>
     </div>
-<script src="script.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/sweetalert"></script>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="https://kit.fontawesome.com/992b0df65a.js" crossorigin="anonymous"></script>
+<script src="script.js"></script>
+
+
 </body>
 </html>
