--- a/public/agregarAlbun/addAlbum.html
+++ b/public/agregarAlbun/addAlbum.html
@@ -9,7 +9,6 @@
   <body>
     <div class="navbar">
       <div id="profile">
-      <img src="" alt="foto_de_perfil">
       <span>Usuario</span>
       </div>
       <!-- menu -->
@@ -18,7 +17,7 @@
           <li><a href="../index.html">Otros albums</a></li>
           <li> <a href="../editarAlbum/editarAlbum.html">Editar album</a></li>
           <li> <a href="../agregarCanciones/agregarCanciones.html">Añadir canciones</a></li>
-          <li> <a href="../logIn/logIn.html" target="_blank">Log Out</a></li>
+          <li id="logout">Log Out</li>
           </ul>
           </div>
   </div>  
@@ -30,6 +29,7 @@
           <input
             class="input"
             type="text"
+            id="titulo"
             name="nombre_del_album"
             placeholder="Ingresa el nombre del album"
             required /></label
@@ -39,6 +39,7 @@
           <input
           class="input"
             type="number"
+            id="año"
             name="año_de_lanzamiento"
             placeholder="Ingresa el año de lanzamiento"
             required /></label
@@ -57,12 +58,13 @@
           >Foto del album:
           <input
           class="input"
-            type="url"
+            type="text"
+            id="portada"
             name="foto_del_disco"
             placeholder="Ingresar la url de la imagen"
-            required /></label
+            /></label
         ><br />
-        <button type="submit">Añadir album</button>
+        <button type="submit" id="añadirAlbum">Añadir album</button>
       </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert"></script>
