--- a/public/albums/album.html
+++ b/public/albums/album.html
@@ -10,16 +10,15 @@
     <body>
         <div class="navbar">
             <div id="profile">
-            <img src="" alt="foto_de_perfil">
             <span>Usuario</span>
             </div>
             <!-- menu -->
             <div> 
                 <ul>
                 <li><a href="../index.html">Otros albums</a></li>
-                <li> <a href="#">Editar album</a></li>
-                <li> <a href="#">Añadir canciones</a></li>
-                <li> <a href="../logIn/logIn.html" target="_blank">Log Out</a></li>
+                <li id="editarAlbum">Editar album</li>
+                <li id="añadirCanciones">Añadir canciones</li>
+                <li id="logout">Log Out</li>
                 </ul>
                 </div>
         </div>  
@@ -38,6 +37,7 @@
         </div> 
         <script src="https://cdn.jsdelivr.net/npm/sweetalert"></script>
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+        <script src="https://kit.fontawesome.com/992b0df65a.js" crossorigin="anonymous"></script>
         <script src="album.js"></script>
 </body>
 </html>
