--- a/public/index.html
+++ b/public/index.html
@@ -10,15 +10,14 @@
 <body id="home">
     <div class="navbar">
         <div id="profile">
-        <img src="" alt="foto_de_perfil">
-        <span>Usuario</span>
+        <p id="usuario">Usuario</p>
         </div>
         <!-- menu -->
        <div>
         <ul>
         <li><a href="./agregarAlbun/addAlbum.html">Añadir album</a></li>
         <li> <a href="./tour/index.html">Fechas del tour</a></li>
-        <li> <a href="./logIn/logIn.html" target="_blank">Log Out</a></li>
+        <li id="logout">Log Out</li>
         </ul>
         </div>
     </div>
@@ -36,15 +35,6 @@
             <h2>Albums</h2>
             <br>
             <div class="containerAlbums">
-                <!-- <div class="album">
-                <i class="fa-star fa-regular fijoArriba"></i>
-                <img src="./imagenes/albumTCEM.jpg" alt="¿Tú crees en mi?">
-                <p>2022</p>
-                </div>
-                <div class="album">
-                    <i class="fa-star fa-regular fijoArriba"></i>
-                   <img src="./imagenes/albummp3.jpg" alt=".mp3">
-                 <p>2023</p> -->
                 </div>
             </div>
         </div>
