--- a/public/logIn/logIn.html
+++ b/public/logIn/logIn.html
@@ -15,33 +15,38 @@
           <input
             class="input"
             type="email"
+            id="email"
             name="email"
             placeholder="mail@gmail.com"
-            
         /></label>
         <br />
         <label
           >Contraseña:
-          <input class="input" type="password" name="contraseña" placeholder="" 
+          <input class="input" type="password" id="contraseña" name="contraseña" placeholder=""
         /></label>
         <p id="error"></p>
         <br />
-        <button type="submit">
+        <button type="submit" id="ingresar">
           Ingresar
           <div class="arrow-wrapper">
-              <div class="arrow"></div>
-      
+            <div class="arrow"></div>
           </div>
-      </button>
+        </button>
       </form>
-      <br>
+      <br />
       <div>
         <p>
-          ¿Aún no sos miembro? <a href="../singUp/singUp.html" target="_blank">Registrate</a>
+          ¿Aún no sos miembro?
+          <a href="../singUp/singUp.html" target="_blank">Registrate</a>
         </p>
       </div>
     </div>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script
+      src="https://kit.fontawesome.com/992b0df65a.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="./login.js"></script>
   </body>
 </html>
