--- a/public/editarAlbum/editarAlbum.html
+++ b/public/editarAlbum/editarAlbum.html
@@ -9,7 +9,6 @@
   <body>
     <div class="navbar">
       <div id="profile">
-      <img src="" alt="foto_de_perfil">
       <span>Usuario</span>
       </div>
       <!-- menu -->
@@ -18,7 +17,7 @@
           <li><a href="../index.html">Otros albums</a></li>
           <li> <a href="#">Editar album</a></li>
           <li> <a href="../agregarCanciones/agregarCanciones.html">Añadir canciones</a></li>
-          <li> <a href="../logIn/logIn.html" target="_blank">Log Out</a></li>
+          <li id="logout">Log Out</li>
           </ul>
           </div>
   </div>  
@@ -30,6 +29,7 @@
           <input
             class="input"
             type="text"
+            id="titulo"
             name="nombre_del_album"
             placeholder="Ingresa el nombre del album"
             required /></label
@@ -48,15 +48,21 @@
           >Portada del album:
           <input
           class="input"
-            type="url"
+            type="text"
+            id="imagen"
             name="foto_del_disco"
             placeholder="Ingresar la url de la imagen"
-            required /></label
+             /></label
         ><br />
         <div class="botones">
-        <button type="submit">Editar</button> <br> <button type="reset">Cancelar</button>
+        <button type="submit" id="editarAlbum">Editar</button> <br> 
+        <button type="button" id="cancelarAlbum">Cancelar</button>
         </div>
       </form>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://kit.fontawesome.com/992b0df65a.js" crossorigin="anonymous"></script>
+    <script src="editarAlbum.js"></script>
   </body>
 </html>
